Resolved wrapping in Firefox and added truncation in month select

--- a/packages/terra-date-input/src/DateInput.module.scss
+++ b/packages/terra-date-input/src/DateInput.module.scss
@@ -7,7 +7,7 @@
 :local {
   .date-input {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     position: relative;
   }
 
@@ -126,12 +126,15 @@
     cursor: pointer;
     font-size: var(--terra-date-input-month-select-font-size, 1.143rem); // 16px allows correct zoom on iOS
     height: var(--terra-date-input-month-select-height, 2.143rem); // 30px
-    margin: 0 2rem 0 0;
+    margin: 0 0.92857rem 0 0;
     outline: 0;
+    overflow:hidden; 
     padding-bottom: var(--terra-date-input-month-select-padding-bottom, 0);
     padding-left: var(--terra-date-input-month-select-padding-left, 0.3571rem);
-    padding-right: var(--terra-date-input-month-select-padding-right, 0.3571rem);
+    padding-right: var(--terra-date-input-month-select-padding-right, 1.42857rem);
     padding-top: var(--terra-date-input-month-select-padding-top, 0);
+    text-overflow:ellipsis;
+    white-space:nowrap; 
     width: 100%;
 
     // Hide the arrow in IE 10 and IE 11
@@ -274,10 +277,15 @@
   }
 
   // Gutters
-  .date-input-day ~ .month-select-wrapper,
+  /*.date-input-day ~ .month-select-wrapper,
   .month-select-wrapper ~ .date-input-day,
   .date-input-year {
     margin-left: var(--terra-date-input-gutters-margin-left, 0.3571rem);
+  }*/
+
+  .month-select-wrapper,
+  .date-input-day {
+    margin-right: var(--terra-date-input-gutters-margin-right, 0.3571rem);
   }
 
   .format-text {
